# pc2mesh

./: AGENTS.md  AGENTS_UPDATED.md  CMakeLists.txt  DEPRECATED_MODULES.md  ENHANCED_FRAMEWORK_GUIDE.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_PROJECT_REPORT.md  Makefile.integration  Makefile.test  README.md  comprehensive_performance_test  comprehensive_performance_test.cpp  debug_json  debug_json.cpp  enhanced_pipeline_test  enhanced_pipeline_with_logging.cpp  environment.yml  logging_enhancement.cpp  performance_benchmark_data.csv  performance_benchmark_report.txt  pymaxflow_solver.py  simple_test  simple_test.cpp  step_by_step_guide  test_complete_system_integration  test_complete_system_integration.cpp  test_cpp_solver  test_cpp_solver.cpp  test_enhanced_detail_reconstruction_simple  test_enhanced_detail_reconstruction_simple.cpp  test_enhanced_dual_contouring_simple  test_enhanced_dual_contouring_simple.cpp  test_enhanced_logging  test_enhanced_logging_system.cpp  test_enhanced_mesh_fusion_simple  test_enhanced_mesh_fusion_simple.cpp  test_graph_cut_integration.cpp  test_graph_cut_simple  test_graph_cut_simple.cpp  test_optimized_udf_simple  (+10 more)
cmake/: recon.pc.in
config/: default.yml
docs/: API_REFERENCE.md  README_ENHANCED.md
examples/: minimal_test.cpp  simple_reconstruction_example.cpp
logs/: integrated_test_report.txt  performance_report.json  performance_report.txt
recon/: CMakeLists.txt  PROJECT_SUMMARY.md  README.md
recon/configs/: detail.yml  fusion.yml  global.yml  shell.yml
recon/data/test/: test_cube.ply
recon/docs/: technical_documentation.md
recon/outputs/test/: basic_test_report.txt
recon/scripts/: lod.py  pipeline.py  qc.py  test_basic.py  tune_parameters.py
recon/src/: config.h.in  detail_reconstruction.cpp  detail_reconstruction.h  enhanced_detail_reconstruction.cpp  enhanced_detail_reconstruction.h  lod_generator.h  main_reconstructor.cpp  main_reconstructor.h  pipeline.cpp  pipeline_simple.cpp  simple_pipeline.cpp  unified_interface.cpp  unified_interface.h
recon/src/base/: types.h
recon/src/config/: config_manager.h
recon/src/detail_layer/: adaptive_detail_selector.cpp  adaptive_detail_selector.h  detail_reconstruction_integrator.cpp  detail_reconstruction_integrator.h  hybrid_reconstructor.cpp  hybrid_reconstructor.h
recon/src/dual_contouring/: dual_contouring.cpp  dual_contouring.h  enhanced_dual_contouring.cpp  enhanced_dual_contouring.h
recon/src/fusion/: alpha_wrapping_fusion.cpp  alpha_wrapping_fusion.h  enhanced_mesh_fusion.cpp  enhanced_mesh_fusion.h  fusion_legalization_integrator.cpp  fusion_legalization_integrator.h  legalization_processor.cpp  legalization_processor.h  mesh_fusion.cpp  mesh_fusion.h
recon/src/graph_cut/: boykov_kolmogorov_solver.cpp  boykov_kolmogorov_solver.h  enhanced_graph_cut.cpp  enhanced_graph_cut.h  enhanced_graph_cut_simple.cpp  graph_cut.cpp  graph_cut.h  minimal_graph_cut.cpp  minimal_graph_cut.h  pymaxflow_solver.cpp  pymaxflow_solver.h  thread_safe_pymaxflow_solver.cpp  thread_safe_pymaxflow_solver.h
recon/src/integration/: udf_graphcut_integrator.cpp  udf_graphcut_integrator.h
recon/src/udf_builder/: enhanced_udf_builder.cpp  enhanced_udf_builder.h  optimized_udf_builder.cpp  optimized_udf_builder.h  udf_builder.cpp  udf_builder.h
recon/src/utils/: data_validator.h  logger.h  performance_monitor.h
recon/tests/: integration_test.cpp
scripts/: install_dependencies.sh
tests/: test_cpp_build.py  test_dependencies.py  test_pipeline.py
